--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: -apple-system, Roboto, Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+input, select, button, textarea {
+  font-family: inherit;
+}
+
+html {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #333;
+}
