--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,6 @@ input, select, button, textarea {
 html {
   font-size: 26px;
   line-height: 1.5;
-  color: #333;
+  background-image: linear-gradient(to right, #221e1e, #3d3a3a);
+  color: #f5f5f5;
 }
