--- a/src/app/features/weather/components/city-form/city-form.component.html
+++ b/src/app/features/weather/components/city-form/city-form.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="weatherForm" (ngSubmit)="onSubmit()">
-  <!-- City Field -->
+  <!-- City name Field -->
   <div class="field-group">
-    <label for="city">City</label>
-    <input id="city" type="text" formControlName="city" />
+    <label for="cityName">City name</label>
+    <input id="cityName" type="text" formControlName="cityName" />
   </div>
-  <div *ngIf="formSubmitted && weatherForm.get('city')?.invalid" class="field-warning">
-    City is required.
+  <div *ngIf="formSubmitted && weatherForm.get('cityName')?.invalid" class="field-warning">
+    City name is required.
   </div>
 
   <!-- Temperature Field -->
@@ -14,7 +14,7 @@
     <input id="temperature" type="number" formControlName="temperature" step="0.1" />
   </div>
   <div *ngIf="formSubmitted && weatherForm.get('temperature')?.invalid" class="field-warning">
-    Temperature is required and must be a valid number.
+    Temperature is required and must be a number between -100ºC and 70ºC.
   </div>
 
   <!-- Raining Field -->
@@ -33,7 +33,7 @@
   <!-- Date Field -->
   <div class="field-group">
     <label for="date">Date</label>
-    <input id="date" type="date" formControlName="date" />
+    <input id="date" type="datetime-local" formControlName="date" />
   </div>
   <div *ngIf="formSubmitted && weatherForm.get('date')?.invalid" class="field-warning">
     Date is required.
@@ -58,5 +58,16 @@
   </div>
 
   <!-- Submit Button -->
-  <button type="submit">Submit</button>
+  <button
+  type="submit"
+  [class.success]="formSubmitted && submissionSuccess"
+  [disabled]="formSubmitted && submissionSuccess"
+>
+  <ng-container *ngIf="formSubmitted && submissionSuccess; else defaultText">
+    ✔ Form Submitted Successfully
+  </ng-container>
+  <ng-template #defaultText>
+    Submit
+  </ng-template>
+</button>
 </form>
