--- a/src/app/features/weather/components/city-form/city-form.component.scss
+++ b/src/app/features/weather/components/city-form/city-form.component.scss
@@ -47,13 +47,20 @@ button {
   border: none;
   border-radius: 4px;
   padding: 10px;
-  align-self: flex-start;
-  width: 100%;
+  font-size: 1rem;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+
+  &.success {
+    background-color: #28a745; /* Green color */
+    color: white;
+    border: 1px solid #28a745;
+    cursor: not-allowed;
+  }
 }
 
-button:hover {
-  background-color: #0056b3;
-}
 
 .field-warning {
   color: red;
