--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  padding: 12px;
+  background-color: #696969;
+  color: white;
 }
 
 .navbar-item {
@@ -24,6 +25,7 @@ ul {
 
 .dropdown .dropdown-toggle {
   background: none;
+  color: white;
   border: none;
   font-size: 1rem;
   cursor: pointer;
@@ -39,7 +41,6 @@ ul {
   border: 1px solid #ccc;
   max-height: 200px;
   overflow-y: auto;
-  text-align: left;
   min-width: max-content;
 }
 
@@ -59,5 +60,27 @@ ul {
 }
 
 .title {
-  margin-right: 100px;
+  margin-right: 75px;
+  margin-left: 75px;
+  font-weight: bold;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+a:focus {
+  text-decoration: none;
+  color: white;
+}
+
