--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,6 +2,10 @@
   <div class="navbar-item title">Weather App</div>
 
   <div class="navbar-item">
+    <a [routerLink]="'/home'" routerLinkActive="active-tab" class="white-nav">Home</a>
+  </div>
+
+  <div class="navbar-item">
     <a [routerLink]="'/city-form'" routerLinkActive="active-tab">Form</a>
   </div>
 
