--- a/src/app/features/weather/components/city-list/city-list.component.scss
+++ b/src/app/features/weather/components/city-list/city-list.component.scss
@@ -4,24 +4,51 @@
 }
 
 .city-item {
-  border-bottom: 1px solid #ddd;
   padding: 10px 0;
 }
 
 .city-name {
-  font-weight: bold;
+  font-weight: 500;
   cursor: pointer;
-  color: #007bff;
+  color: white;
   margin: 0;
 }
 
 .city-name:hover {
   text-decoration: underline;
+  font-size: 35px;
+}
+
+.city-header {
+  cursor: pointer;
+  background-color: #221e1e;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 5px;
 }
 
 .city-details {
+  padding: 10px;
+  border-bottom: 5px;
+}
+
+.white-border {
+  border-left: 3px solid white;
+  border-bottom: 5px;
+  padding-left: 25px;
+}
+
+.city-record {
+  margin-left: 25px;
+  padding-left: 25px;
+}
+
+.worst-registries {
+  margin-top: 20px;
+}
+
+.worst-registry {
+  border: 1px solid #ff4d4d;
+  padding-left: 50px;
   margin-top: 10px;
-  padding-left: 20px;
-  font-size: 0.9rem;
-  color: white;
 }
