Added Chart, Fixed Form Submit Button
Also styled the Refresh button on the Cities List page

--- a/src/app/features/weather/components/city-form/city-form.component.html
+++ b/src/app/features/weather/components/city-form/city-form.component.html
@@ -65,10 +65,10 @@
    <button
     type="submit"
     [class.success]="formSubmitted && submissionSuccess"
-    [disabled]="formSubmitted && submissionSuccess"
+    [disabled]="false"
   >
-    <ng-container *ngIf="formSubmitted && submissionSuccess; else defaultText">
-      ✔ Form Submitted Successfully
+    <ng-container *ngIf="defaultText">
+      Submit
     </ng-container>
     <ng-template #defaultText>
       Submit
