--- a/src/app/features/weather/components/city-form/city-form.component.scss
+++ b/src/app/features/weather/components/city-form/city-form.component.scss
@@ -48,7 +48,7 @@ select {
 
 button {
   cursor: pointer;
-  background-color: #007bff;
+  background-color: red;
   color: white;
   border: none;
   border-radius: 4px;
@@ -58,14 +58,7 @@ button {
   width: max-content;
 
   &:hover {
-    background-color: #0056b3;
-  }
-
-  &.success {
-    background-color: #28a745; /* Green color */
-    color: white;
-    border: 1px solid #28a745;
-    cursor: not-allowed;
+    background-color: darkred;
   }
 }
 
