--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar" *ngIf="showNavbar">
   <div class="navbar-item title">Weather App</div>
 
   <div class="navbar-item">
