--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,52 @@ input, select, button, textarea {
 html {
   font-size: 26px;
   line-height: 1.5;
-  background-image: linear-gradient(to right, #221e1e, #3d3a3a);
+  background-image: linear-gradient(to right, #0c0b0b, #575252);
   color: #f5f5f5;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown .dropdown-toggle {
+  background: none;
+  color: white;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.dropdown .dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  border: 1px solid #ccc;
+  max-height: 200px;
+  overflow-y: auto;
+  min-width: max-content;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu li {
+  text-decoration: none;
+  padding: 5px 10px;
+  white-space: nowrap;
+}
+
+.dropdown-menu li a {
+  text-decoration: none;
+  color: black;
 }
