--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <h1>{{ 'WEATHER_APP' | translate }}</h1>
     <div class="dropdown">
-      <button class="dropdown-toggle">Language &#9660;</button>
+      <button class="dropdown-toggle">{{ 'LANGUAGE' | translate }} &#9660;</button>
       <ul class="dropdown-menu">
         <li><a (click)="changeLanguage('en')">English</a></li>
         <li><a (click)="changeLanguage('pt')">Portuguese</a></li>
