--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
 
-  <div class="navbar-item dropdown">
+  <div class="navbar-item dropdown" *ngIf="showTimezone">
     <button class="dropdown-toggle">Timezone &#9660;</button>
     <ul class="dropdown-menu timezone">
       <li><a href="#" (click)="changeTimezone('UTC')">UTC</a></li>
