Home Component Translated and Animated

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,12 +4,12 @@
     <div class="dropdown">
       <button class="dropdown-toggle">{{ 'LANGUAGE' | translate }} &#9660;</button>
       <ul class="dropdown-menu">
-        <li><a (click)="changeLanguage('en')">English</a></li>
-        <li><a (click)="changeLanguage('pt')">Portuguese</a></li>
-        <li><a (click)="changeLanguage('es')">Spanish</a></li>
-        <li><a (click)="changeLanguage('fr')">French</a></li>
-        <li><a (click)="changeLanguage('de')">German</a></li>
-        <li><a (click)="changeLanguage('it')">Italian</a></li>
+        <li><a (click)="changeLanguage('en')">{{ 'ENGLISH' | translate }}</a></li>
+        <li><a (click)="changeLanguage('pt')">{{ 'PORTUGUESE' | translate }}</a></li>
+        <li><a (click)="changeLanguage('es')">{{ 'SPANISH' | translate }}</a></li>
+        <li><a (click)="changeLanguage('fr')">{{ 'FRENCH' | translate }}</a></li>
+        <li><a (click)="changeLanguage('de')">{{ 'GERMAN' | translate }}</a></li>
+        <li><a (click)="changeLanguage('it')">{{ 'ITALIAN' | translate }}</a></li>
       </ul>
     </div>
   </div>
