--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,19 @@
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .home {
   text-align: center;
   margin: 20px;
   position: relative;
+  animation: slideDown 2s ease-out;
 }
 
 .header-container {
@@ -9,20 +21,23 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 button {
   font-size: 25px;
   border: none;
   text-decoration: none;
-  background-color: white;
-  :hover {
+  background-color: #ccc;
+
+  &:hover {
     cursor: pointer;
   }
 }
 
 .route-list {
-  color: white;
+  color: #ccc;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +45,7 @@ button {
 }
 
 a {
-  color: white;
+  color: #ccc;
   text-decoration: none;
   cursor: pointer;
 }
@@ -42,11 +57,10 @@ a {
 
 .dropdown .dropdown-toggle {
   background: none;
-  color: white;
+  color: #ccc;
   border: none;
   font-size: 1rem;
   cursor: pointer;
-
 }
 
 .dropdown .dropdown-menu {
@@ -55,7 +69,7 @@ a {
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background: white;
+  background: #ccc;
   border: 1px solid #ccc;
   max-height: 200px;
   overflow-y: auto;
@@ -84,11 +98,10 @@ h1 {
 
 p {
   font-size: 50px !important;
-  border: 3px solid white;
+  border: 3px solid #ccc;
   padding: 10px;
-  margin: 0;
+  margin: 100px auto;
   width: auto;
   text-align: center;
-  margin: 200px 200px;
   min-width: 400px;
 }
